--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "cookie-parser": "^1.4.6",
+    "crypto-js": "^4.1.1",
     "eslint": "^8.36.0",
     "express": "^4.18.2"
   }
